--- a/index.html
+++ b/index.html
@@ -1,22 +1,97 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/style.css">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    <title>Latitude</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand text-uppercase" href="/">Latitude</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Plots
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/plots/max-temperature">Max Temperature</a>
+                        <a class="dropdown-item" href="/plots/humidity">Humidity</a>
+                        <a class="dropdown-item" href="/plots/cloudiness">Cloudiness</a>
+                        <a class="dropdown-item" href="/plots/wind-speed">Wind Speed</a>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/comparisons">Comparisons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/data">Data </a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+    <section class="container-fluid px-5 py-5">
+        <div class="row">
+            <div class="col-sm-12 col-lg-7">
+                <div class="card mb-3">
+                    <div class="card-header bg-transparent">
+
+                        <h5 class="card-title">Summary: Latitude vs. X</h5>
+                    </div>
+
+                    <div class="card-body">
+                        <img class="card-img p-3 float-left w-50" src="/visualizations/CityLatvsMaxTemp.png" alt="Lat vs. Max Temp">
+                        <p class="card-text">
+                            Assigning 1,500 random Latitude and Longitudes, I utilized the Python CitiPy library to find the city closest to the Lat/Lon (dropping all duplicates) to get a listing of over 600 cities.</p>
+                        <p> I utilized OpenWeatherMapAPI to get the weather for the cities (dropping cities with no data) to create a dataframe of weather information for over 500 cities.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-sm-12 col-lg-5">
+                <div class="card mb-3">
+                    <div class="card-header bg-transparent">
+
+                        <h5 class="card-title">Visualizations</h5>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="d-flex flex-wrap">
+                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsMaxTemp.png" alt="Lat vs. Max Temp">
+                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsHumidity.png" alt="Lat vs. Max Temp">
+                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsCloudiness.png" alt="Lat vs. Max Temp">
+                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsWindSpeed.png" alt="Lat vs. Max Temp">
+                        </div>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
