--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p class="card-text">
                             Assigning 1,500 random Latitude and Longitudes, I utilized the Python CitiPy library to find the city closest to the Lat/Lon (dropping all duplicates) to get a listing of over 600 cities.</p>
                         <p> I utilized OpenWeatherMapAPI to get the weather for the cities (dropping cities with no data) to create a dataframe of weather information for over 500 cities.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
                     </div>
                 </div>
 
@@ -71,14 +71,14 @@
                         <h5 class="card-title">Visualizations</h5>
                     </div>
 
-                    <div class="card-body">
-                        <div class="d-flex flex-wrap">
-                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsMaxTemp.png" alt="Lat vs. Max Temp">
-                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsHumidity.png" alt="Lat vs. Max Temp">
-                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsCloudiness.png" alt="Lat vs. Max Temp">
-                            <img class="card-img p-2 float-left w-50" src="/visualizations/CityLatvsWindSpeed.png" alt="Lat vs. Max Temp">
+                    <div class="card-body container">
+                        <div class="row">
+                            <a class="col-md-6 p-3" href="/plots/max-temperature"><img class="card-img" src="/visualizations/CityLatvsMaxTemp.png" alt="Lat vs. Max Temp"></a>
+                            <a class="col-md-6 p-3" href="/plots/humidity"><img class="card-img " src="/visualizations/CityLatvsHumidity.png" alt="Lat vs. Humidity"></a>
+                            <a class="col-md-6 p-3" href="/plots/cloudiness"><img class="card-img" src="/visualizations/CityLatvsCloudiness.png" alt="Lat vs. Cloudiness"></a>
+                            <a class="col-md-6 p-3" href="/plots/wind-speed"> <img class="card-img " src="/visualizations/CityLatvsWindSpeed.png" alt="Lat vs. Wind Speed"></a>
                         </div>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
                     </div>
                 </div>
 
@@ -86,12 +86,16 @@
 
         </div>
     </section>
+    <footer class="footer">
+        <!-- d-flex text-center bg-light align-items-center w-100 justify-content-center p-3 mt-auto -->
+        &copy; Copyright Diana Alderbashi 2019
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src=" https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
 </body>
 
 </html>
