--- a/plots/humidity/index.html
+++ b/plots/humidity/index.html
@@ -8,14 +8,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
 
     <title>Humidity</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand text-uppercase" href="/">Latitude</a>
+        <a class="navbar-brand text-uppercase" href="">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,18 +26,18 @@
                         Plots
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/plots/max-temperature">Max Temperature</a>
-                        <a class="dropdown-item" href="/plots/humidity">Humidity</a>
-                        <a class="dropdown-item" href="/plots/cloudiness">Cloudiness</a>
-                        <a class="dropdown-item" href="/plots/wind-speed">Wind Speed</a>
+                        <a class="dropdown-item" href="plots/max-temperature">Max Temperature</a>
+                        <a class="dropdown-item" href="plots/humidity">Humidity</a>
+                        <a class="dropdown-item" href="plots/cloudiness">Cloudiness</a>
+                        <a class="dropdown-item" href="plots/wind-speed">Wind Speed</a>
                     </div>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/comparisons">Comparisons</a>
+                    <a class="nav-link" href="comparisons">Comparisons</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/data">Data </a>
+                    <a class="nav-link" href="data">Data </a>
                 </li>
 
             </ul>
@@ -74,10 +74,10 @@
 
                     <div class="card-body container">
                         <div class="row">
-                            <a class="col-md-6 p-3" href="/plots/max-temperature"><img class="card-img" src="/visualizations/CityLatvsMaxTemp.png" alt="Lat vs. Max Temp"></a>
-                            <a class="col-md-6 p-3 border border-info rounded" href="/plots/humidity"><img class="card-img " src="/visualizations/CityLatvsHumidity.png" alt="Lat vs. Humidity"></a>
-                            <a class="col-md-6 p-3" href="/plots/cloudiness"><img class="card-img" src="/visualizations/CityLatvsCloudiness.png" alt="Lat vs. Cloudiness"></a>
-                            <a class="col-md-6 p-3" href="/plots/wind-speed"> <img class="card-img " src="/visualizations/CityLatvsWindSpeed.png" alt="Lat vs. Wind Speed"></a>
+                            <a class="col-md-6 p-3" href="plots/max-temperature"><img class="card-img" src="/visualizations/CityLatvsMaxTemp.png" alt="Lat vs. Max Temp"></a>
+                            <a class="col-md-6 p-3 border border-info rounded" href="plots/humidity"><img class="card-img " src="/visualizations/CityLatvsHumidity.png" alt="Lat vs. Humidity"></a>
+                            <a class="col-md-6 p-3" href="plots/cloudiness"><img class="card-img" src="/visualizations/CityLatvsCloudiness.png" alt="Lat vs. Cloudiness"></a>
+                            <a class="col-md-6 p-3" href="plots/wind-speed"> <img class="card-img " src="/visualizations/CityLatvsWindSpeed.png" alt="Lat vs. Wind Speed"></a>
                         </div>
 
                     </div>
