--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <base href="/Web-Design-Challenge/">
     <link rel="stylesheet" href="assets/style.css">
 
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <a class="navbar-brand text-uppercase" href="">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
                     </div>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="comparisons">Comparisons</a>
                 </li>
                 <li class="nav-item">
@@ -63,21 +63,21 @@
                         </div>
 
                         <div class="row text-center">
-                            <a class="col-md-6 p-5" href="plots/max-temperature">
+                            <a class="col-md-6 p-5 text-decoration-none" href="plots/max-temperature">
                                 <h4>vs. Max Temperature </h4>
                                 <img class="card-img" src="visualizations/CityLatvsMaxTemp.png" alt="Lat vs. Max Temp">
                             </a>
-                            <a class="col-md-6 p-5" href="plots/humidity">
+                            <a class="col-md-6 p-5 text-decoration-none" href="plots/humidity ">
                                 <h4>vs. Humidity </h4>
-                                <img class="card-img " src="visualizations/CityLatvsHumidity.png" alt="Lat vs. Humidity">
+                                <img class="card-img" src="visualizations/CityLatvsHumidity.png " alt="Lat vs. Humidity">
                             </a>
-                            <a class="col-md-6 p-5" href="plots/cloudiness">
+                            <a class="col-md-6 p-5 text-decoration-none" href="plots/cloudiness">
                                 <h4>vs. Cloudiness </h4>
                                 <img class="card-img" src="visualizations/CityLatvsCloudiness.png" alt="Lat vs. Cloudiness">
                             </a>
-                            <a class="col-md-6 p-5" href="plots/wind-speed">
+                            <a class="col-md-6 p-5 text-decoration-none" href="plots/wind-speed ">
                                 <h4>vs. Wind Speed </h4>
-                                <img class="card-img " src="visualizations/CityLatvsWindSpeed.png" alt="Lat vs. Wind Speed">
+                                <img class="card-img" src="visualizations/CityLatvsWindSpeed.png " alt="Lat vs. Wind Speed ">
                             </a>
                         </div>
 
@@ -89,16 +89,16 @@
         </div>
 
     </section>
-    <footer class="footer">
+    <footer class="footer ">
         <!-- d-flex text-center bg-light align-items-center w-100 justify-content-center p-3 mt-auto -->
         &copy; Copyright Diana Alderbashi 2019
     </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src=" https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
